# zcash-indexer

./: Cargo.toml  README.md  diesel.toml
src/: main.rs  models.rs
src/database/: database.rs  model.rs  schema.rs
src/database/migrations/2025-11-24-185051_create_zcash_htlcs/: down.sql  up.sql
src/database/migrations/2025-11-24-185155_create_indexer_checkpoints/: down.sql  up.sql
src/indexer/: helper.rs  indexer.rs  mod.rs  node_client.rs
