[package]
name = "zcash_indexer"
version = "0.1.0"
edition = "2024"

[dependencies]

dotenv = "0.15"
anyhow = "1.0"
hmac = "0.12.1"
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.2.0", features = ["postgres", "r2d2", "chrono", "uuid", "numeric", "serde_json"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
hex = "0.4"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
r2d2 = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }